Fix display bug on Windows, remove scrollbar

--- a/shared/popup.css
+++ b/shared/popup.css
@@ -202,6 +202,7 @@ body {
   border-radius: 10px;
   min-height: 24px;
   padding-left: 5px;
+  max-width: 140px;
 }
 .search_container {
   margin: 5px 0px 5px 5px;
@@ -410,6 +411,10 @@ body {
   overflow-y: scroll;
   background-color: #f6f6f6;
   grid-area: list;
+  scrollbar-width: none;
+}
+.list_container::-webkit-scrollbar {
+  display: none;
 }
 .list {
   margin: 10px 10px 10px 10px;
